--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -1,80 +1,114 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.1-final"
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python39164bit3bb08f5b4f0141539882c163295dc7d5",
-   "display_name": "Python 3.9.1 64-bit",
-   "language": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.keras.datasets import fashion_mnist\n",
     "\n",
-    "(train_images, train_labels), (test_images, test_labels) = fashion_mnist.load_data()"
+    "(train_images, train_labels), (test_images,\n",
+    "                               test_labels) = fashion_mnist.load_data()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60000\n",
+      "60000\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "print(len(train_images))\n",
-    "print(len(train_labels))"
+    "print(len(train_labels))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000\n",
+      "10000\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(test_images))\n",
-    "print(len(test_labels))"
+    "print(len(test_labels))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10000, 28, 28)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(60000, 28, 28)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(test_images.shape)\n",
-    "train_images.shape"
+    "train_images.shape\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class Label: 0\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m digit \u001b[39m=\u001b[39m test_images[\u001b[39m120\u001b[39m]\n\u001b[0;32m      2\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mClass Label:\u001b[39m\u001b[39m\"\u001b[39m, test_labels[\u001b[39m120\u001b[39m])\n\u001b[1;32m----> 4\u001b[0m plt\u001b[39m.\u001b[39mimshow(digit, cmap\u001b[39m=\u001b[39mplt\u001b[39m.\u001b[39mcm\u001b[39m.\u001b[39mbinary)\n\u001b[0;32m      5\u001b[0m plt\u001b[39m.\u001b[39mshow()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "digit = test_images[120]\n",
-    "print(\"Class Label:\",test_labels[120])\n",
+    "print(\"Class Label:\", test_labels[120])\n",
     "\n",
     "plt.imshow(digit, cmap=plt.cm.binary)\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -85,7 +119,7 @@
    "source": [
     "import numpy as np\n",
     "print(train_labels)\n",
-    "print(np.unique(train_labels))"
+    "print(np.unique(train_labels))\n"
    ]
   },
   {
@@ -96,7 +130,7 @@
    "source": [
     "import numpy as np\n",
     "print(test_labels)\n",
-    "print(np.unique(test_labels))"
+    "print(np.unique(test_labels))\n"
    ]
   },
   {
@@ -112,7 +146,7 @@
     "\n",
     "\n",
     "network.add(layers.Dense(512, activation='relu', input_shape=(28*28, )))\n",
-    "network.add(layers.Dense(10, activation='softmax'))"
+    "network.add(layers.Dense(10, activation='softmax'))\n"
    ]
   },
   {
@@ -123,7 +157,7 @@
    "source": [
     "network.compile(optimizer='rmsprop',\n",
     "                loss='categorical_crossentropy',\n",
-    "                metrics=['accuracy'])"
+    "                metrics=['accuracy'])\n"
    ]
   },
   {
@@ -132,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_images.ndim"
+    "train_images.ndim\n"
    ]
   },
   {
@@ -141,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "50/255"
+    "50/255\n"
    ]
   },
   {
@@ -151,11 +185,11 @@
    "outputs": [],
    "source": [
     "train_images = train_images.reshape((60000, 28 * 28))\n",
-    "train_images = train_images.astype('float32') / 255 #Normalization\n",
+    "train_images = train_images.astype('float32') / 255  # Normalization\n",
     "\n",
     "\n",
     "test_images = test_images.reshape((10000, 28 * 28))\n",
-    "test_images = test_images.astype('float32') / 255 #Normalization"
+    "test_images = test_images.astype('float32') / 255  # Normalization\n"
    ]
   },
   {
@@ -164,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_labels[0]"
+    "train_labels[0]\n"
    ]
   },
   {
@@ -176,7 +210,7 @@
     "from tensorflow.keras.utils import to_categorical\n",
     "\n",
     "train_labels = to_categorical(train_labels)\n",
-    "test_labels = to_categorical(test_labels)"
+    "test_labels = to_categorical(test_labels)\n"
    ]
   },
   {
@@ -185,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_labels[0]"
+    "train_labels[0]\n"
    ]
   },
   {
@@ -194,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "network.fit(train_images, train_labels, epochs=5, batch_size=128)"
+    "network.fit(train_images, train_labels, epochs=5, batch_size=128)\n"
    ]
   },
   {
@@ -204,8 +238,30 @@
    "outputs": [],
    "source": [
     "test_loss, test_acc = network.evaluate(test_images, test_labels)\n",
-    "print('test_acc:', test_acc)"
+    "print('test_acc:', test_acc)\n"
    ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.2"
+  },
+  "orig_nbformat": 2
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
