--- a/string_methods.ipynb
+++ b/string_methods.ipynb
@@ -24,7 +24,7 @@
     }
    ],
    "source": [
-    "\"Mountains\".upper()"
+    "\"Mountains\".upper()\n"
    ]
   },
   {
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "\"Mountains\".lower()"
+    "\"Mountains\".lower()\n"
    ]
   },
   {
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "\" yes \".strip()"
+    "\" yes \".strip()\n"
    ]
   },
   {
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "\" yes \".lstrip()"
+    "\" yes \".lstrip()\n"
    ]
   },
   {
@@ -104,7 +104,7 @@
     }
    ],
    "source": [
-    "\" yes \".rstrip()"
+    "\" yes \".rstrip()\n"
    ]
   },
   {
@@ -124,7 +124,7 @@
     }
    ],
    "source": [
-    "\"The number of times e occurs in this string is 4\".count(\"e\")"
+    "\"The number of times e occurs in this string is 4\".count(\"e\")\n"
    ]
   },
   {
@@ -144,7 +144,7 @@
     }
    ],
    "source": [
-    "\"Forest\".endswith(\"rest\")"
+    "\"Forest\".endswith(\"rest\")\n"
    ]
   },
   {
@@ -164,7 +164,7 @@
     }
    ],
    "source": [
-    "\"Forest\".isnumeric()"
+    "\"Forest\".isnumeric()\n"
    ]
   },
   {
@@ -184,7 +184,7 @@
     }
    ],
    "source": [
-    "\"12345\".isnumeric()"
+    "\"12345\".isnumeric()\n"
    ]
   },
   {
@@ -204,7 +204,7 @@
     }
    ],
    "source": [
-    "\" \".join([\"This\", \"is\", \"a\", \"phrase\", \"joined\", \"by\", \"spaces.\"])"
+    "\" \".join([\"This\", \"is\", \"a\", \"phrase\", \"joined\", \"by\", \"spaces.\"])\n"
    ]
   },
   {
@@ -224,7 +224,7 @@
     }
    ],
    "source": [
-    "\"This is a string.\".split()"
+    "\"This is a string.\".split()\n"
    ]
   }
  ],
